// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="center"
  >
    <div
      class="ant-layout css-dev-only-do-not-override-nnuwmp"
    >
      <main
        class="ant-layout-content css-dev-only-do-not-override-nnuwmp"
      >
        <div
          class="container"
        >
          <div
            class="ant-row ant-row-center css-dev-only-do-not-override-nnuwmp"
          >
            <div
              class="ant-col ant-col-20 ant-col-md-12 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-nnuwmp"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-nnuwmp"
              >
                <h1
                  class="ant-typography css-dev-only-do-not-override-nnuwmp"
                >
                  The Movie DB
                </h1>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper css-dev-only-do-not-override-nnuwmp"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <span
                                aria-label="user"
                                class="anticon anticon-user"
                                role="img"
                                style="color: rgba(0, 0, 0, 0.25);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="user"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-nnuwmp"
                              id="username"
                              placeholder="Username"
                              type="text"
                              value=""
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper css-dev-only-do-not-override-nnuwmp"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <span
                                aria-label="lock"
                                class="anticon anticon-lock"
                                role="img"
                                style="color: rgba(0, 0, 0, 0.25);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="lock"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-nnuwmp"
                              id="password"
                              placeholder="Password"
                              type="password"
                              value=""
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-nnuwmp ant-btn-primary"
                            type="submit"
                          >
                            <span>
                              Log in
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-col ant-col-24 css-dev-only-do-not-override-nnuwmp"
            >
              <p
                class="text-center"
              >
                Don't have The Movie Database account? 
                <a
                  class="ant-typography css-dev-only-do-not-override-nnuwmp"
                  href="https://www.themoviedb.org/signup"
                  rel="noreferrer"
                  target="_blank"
                >
                  Sign up.
                </a>
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Login component matches snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="center"
  >
    <div
      class="ant-layout css-dev-only-do-not-override-nnuwmp"
    >
      <main
        class="ant-layout-content css-dev-only-do-not-override-nnuwmp"
      >
        <div
          class="container"
        >
          <div
            class="ant-row ant-row-center css-dev-only-do-not-override-nnuwmp"
          >
            <div
              class="ant-col ant-col-20 ant-col-md-12 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-nnuwmp"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-nnuwmp"
              >
                <h1
                  class="ant-typography css-dev-only-do-not-override-nnuwmp"
                >
                  The Movie DB
                </h1>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper css-dev-only-do-not-override-nnuwmp"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <span
                                aria-label="user"
                                class="anticon anticon-user"
                                role="img"
                                style="color: rgba(0, 0, 0, 0.25);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="user"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-nnuwmp"
                              id="username"
                              placeholder="Username"
                              type="text"
                              value=""
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper css-dev-only-do-not-override-nnuwmp"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <span
                                aria-label="lock"
                                class="anticon anticon-lock"
                                role="img"
                                style="color: rgba(0, 0, 0, 0.25);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="lock"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-nnuwmp"
                              id="password"
                              placeholder="Password"
                              type="password"
                              value=""
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-nnuwmp"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-nnuwmp"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-nnuwmp"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-nnuwmp ant-btn-primary ant-btn-loading"
                            type="submit"
                          >
                            <span
                              class="ant-btn-icon ant-btn-loading-icon"
                            >
                              <span
                                aria-label="loading"
                                class="anticon anticon-loading anticon-spin"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="loading"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span>
                              Log in
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-col ant-col-24 css-dev-only-do-not-override-nnuwmp"
            >
              <p
                class="text-center"
              >
                Don't have The Movie Database account? 
                <a
                  class="ant-typography css-dev-only-do-not-override-nnuwmp"
                  href="https://www.themoviedb.org/signup"
                  rel="noreferrer"
                  target="_blank"
                >
                  Sign up.
                </a>
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
